Adicionando mais mudanças